# vosk-cli

./: .gitignore  README.md  pyproject.toml
src/vosk_cli/: __init__.py
src/vosk_tui/: __init__.py
