[project]
name = "vosk-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Preben Vangberg", email = "prv21fgt@bangor.ac.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
    "sounddevice>=0.5.1",
    "vosk>=0.3.45",
]

[project.scripts]
vosk-cli = "vosk_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
